- Non-fatal errors for author settings are now quietly logged and do not generate an alert
- Improve building level error checking and correction
- Improve feedback on whether errors are in local or author settings
- Improve job level breakdowns where old-style workplace counts are used alongside unxepected subservice definitions


Version 1.2.3

- Now intelligently guesses correct UI category when an invalid category has been provided
- Fix workplace allocation when old-format workplace totals are used (includes correction of rounding errors)
- Improved resiliance to invalid office and industrial subservices
- Building level corrections are now reported quietly in the log, not screaming in your face
- Ditto for XML files containing no valid buildings


Version 1.2.2

- Where residential buildings have no homes but do have workplaces, use workplace count for home count instead
- Buildings with a UI category of 'commercial' are now corrected to 'comhigh'
- Improve some error messages


Version 1.2.1

- Adjust error checking to allow for null subservices for office and industrial buildings


Version 1.2

- Add override for residential building household counts on game load (only applies to buildings in LocalRICOSettings.xml with realistic pop mod option disabled)
- Options panel UI improvements:
- - Subservice selection now resets on service change
- - UI category and level automatically update on service/subservice changes
- - Hide 'Enable pollution' checkbox label when checkbox is inactive
- Add tooltips to ploppable tool tabs
- Fix self-sufficient housing icon on ploppable tool tab disappearing when selected
- Overhaul and restructure logging and error management
- Building levels now sanity checked and overridden when out-of-bounds (no more crashes due to insane values)
- Code cleanups and streamlining


Version 1.1.1

- Remove development logging


Version 1.1

- Migrate to Harmony
- Add Chinese translations by Yuuki